# secrets

./: .dist.env  .dockerignore  .env  .env.example  .gitignore  .test.env  Dockerfile  Makefile  README.md  alembic.ini  data_dump.txt  docker-compose-base.yml  docker-compose-prod.yml  docker-compose.override.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd.yml  ci.yml  deploy.yaml  python-app.yml
api/: __main__.py
api/auth/: schemes.py
app/: config.py  dependencies.py  exceptions.py  main.py  routing.py  schemas.py  service.py  settings.py
app/api/: app.py  dependencies.py  routers.py
app/auth/: auth_router.py  backends.py  config.py  dependencies.py  manager.py  models.py  repositories.py  router.py  schemas.py  strategies.py  transports.py  user_router.py
app/bot/: __main__.py  dispatcher.py
app/cache/: __init__.py  adapter.py
app/core/: __init__.py  config.py  database.py  engine.py  gateway.py  uow.py
app/database/: __init__.py
app/db/: config.py  mixins.py  models.py  repository.py  schemas.py  uow.py
app/mail/: base.py  client.py
app/passwords/: config.py  dependencies.py  encryption.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py
app/security/: config.py  encryption.py
app/tasks/: __init__.py  app.py  worker.py
app/users/: router.py
backend/: __init__.py  __main__.py  env.py
backend/application/: config.py
backend/common/: env.py  settings.py
backend/domain/: config.py
backend/infrastructure/: __init__.py  config.py  database.py  redis.py
backend/interface/: app.py
bot/: __main__.py  commands.py  dispatcher.py
bot/keyboards/: auth.py  main.py  record.py
bot/logic/: main.py  start.py
bot/middlewares/: db.py
bot/utils/: __init__.py
buildfiles/: Dockerfile  Scheduler.Dockerfile  Tests.Dockerfile  redis.conf
docker/: Scheduler.Dockerfile  celery.sh  fastapi.Dockerfile
locales/: messages.pot
migrations/: env.py
migrations/versions/: 003f16bad17a_fix_tests.py  0b55a661488b_.py  10056b8f4f16_widen_tg_data_collected_from_users.py  2024_01_16_1237-0f41b04f4827_.py  2024_01_16_1743-86de5fa30ee6_.py  2024_01_18_2231-f396e21d9725_.py  2024_01_18_2233-469afbf45230_.py  2024_01_18_2307-ede3fd924a83_.py  2024_01_26_1454-8e8031a6978e_.py  2024_06_04_0036-99323c617a2c_.py  2024_06_12_1316-46345c9de87d_.py  2024_10_01_1633-4a2e144a63d7_.py  3ace414026c8_fix_id_s_overflow.py  598d46c20cde_update.py  (+13 more)
secrets_app/: __init__.py  dependencies.py  main.py  models.py  schemas.py  settings.py
services/: config.py
src/: __init__.py  __main__.py  api.py  app.py  config.py  dispatcher.py  main.py  utils.py
templates/: base.html  welcome.html
tests/: conftest.py
(+508 files in other folders)
